WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
90798
IndexedDB: Empty arrays shouldn't be valid key paths
https://bugs.webkit.org/show_bug.cgi?id=90798
Summary
IndexedDB: Empty arrays shouldn't be valid key paths
Joshua Bell
Reported
2012-07-09 10:26:52 PDT
Pending spec update discussed at:
https://www.w3.org/Bugs/Public/show_bug.cgi?id=17657
Passing an empty array as a key path to createIndex() or createObjectStore() should throw SyntaxError.
Attachments
Patch
(7.58 KB, patch)
2012-07-09 10:57 PDT
,
Joshua Bell
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Joshua Bell
Comment 1
2012-07-09 10:57:12 PDT
Created
attachment 151279
[details]
Patch
Joshua Bell
Comment 2
2012-07-09 10:57:39 PDT
alecflett@, dgrogan@ - take a look? tony@ - r?
Alec Flett
Comment 3
2012-07-09 11:06:59 PDT
Comment on
attachment 151279
[details]
Patch LGTM
WebKit Review Bot
Comment 4
2012-07-09 12:04:21 PDT
Comment on
attachment 151279
[details]
Patch Clearing flags on attachment: 151279 Committed
r122127
: <
http://trac.webkit.org/changeset/122127
>
WebKit Review Bot
Comment 5
2012-07-09 12:04:25 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug