IndexedDB: Empty arrays shouldn't be valid key paths https://bugs.webkit.org/show_bug.cgi?id=90798

Reviewed by Tony Chang.

Source/WebCore:

Other IDB implementations already enforce this although it is not yet in
the spec (see https://www.w3.org/Bugs/Public/show_bug.cgi?id=17657). If an
empty array is passed as the key path arg to IDBDatabase.createObjectStore()
or IDBObjectStore.createIndex(), a SYNTAX_ERR DOMException is now thrown.

Test: storage/indexeddb/keypath-arrays.html
      storage/indexeddb/keypath-basics.html

* Modules/indexeddb/IDBKeyPath.cpp:
(WebCore::IDBKeyPath::isValid): Test for empty array.

LayoutTests:

* storage/indexeddb/keypath-arrays-expected.txt:
* storage/indexeddb/keypath-basics-expected.txt:
* storage/indexeddb/resources/keypath-arrays.js:
(openSuccess.request.onsuccess):
(openSuccess):
* storage/indexeddb/resources/keypath-basics.js:


Canonical link: https://commits.webkit.org/108634@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@122127 268f45cc-cd09-0410-ab3c-d52691b4dbfc